docs/fim-entrega-1

--- a/docs/Base/1.3.ModelagemBPMN.md
+++ b/docs/Base/1.3.ModelagemBPMN.md
@@ -79,7 +79,7 @@ Figura 4: Metodologia
 
 <div  style="text-align: center">
 
-<font size="3">Autores: [Carlos](https://github.com/carlinn1), [Gabriel](https://github.com/gabrielsarcan), [Mateus](https://github.com/mateus9levy), 2025.</font>
+<font size="3">Autores: [Lucas Bottino](https://github.com/LucasBottino), 2025.</font>
 
 </div>
 
