--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -1,57 +1,62 @@
-# 1.4. Participações (Base)
+<center>
 
-Breve relato sobre as participações/contribuições de cada membro à entrega.
+# __Participações__
 
-## Módulo Design Sprint (Foco_1)
+## __Foco 1: Módulo Design Sprint__
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
 
-EXEMPLO:
-| Fulano | 1. Participação nas Etapas da Design Sprint elaborando artefatos | Boa | Registro nos Versionamentos do Documento de Design Sprint, conforme (link)
+| Nome do Membro | Contribuição | Significância da Contribuição para o Projeto | Comprobatórios  |
+| :------------: | :----------: | :------------------------------------------: | :-------------: |
+| **Lucas Gama De Araujo Bottino** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e na produção do [Design Sprint](1.1.DesignSprint.md), [Prototipação](1.5.10.Prototipacao.md), [Lista de Stakeholder](1.5.9.ListaStakeholders.md),   | Excelente  | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #33](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/33), |
+| **Luiza Maluf Amorim** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e da produção do [Design Sprint](1.1.DesignSprint.md), Revisão do PR #29, [Priorzação](1.5.7.Priorizacao.md), [Tabela de Requisitos](1.5.6.Tabela-Requisitos.md), [Escopo mínimo](1.5.8.Escopo-minimo.md), [Público-alvo](1.2.5.Publico-Alvo.md) | Excelente | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #29](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/29), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md), [PR #28](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/28), [PR #23](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/23) |
+| **Arthur Fonseca Vale** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), [Questionário](1.1.6.Questionario.md) | Excelente |[Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #34](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/34) |
+| **Carlos Henrique de Souza Bispo** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e na produção do [Design Sprint](1.1.DesignSprint.md) | Excelente |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) |
+| **Fillipe Souto de Andrade** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), documentação do [Design Sprint](1.1.DesignSprint.md), [Priorzação](1.5.7.Priorizacao.md) | Excelente | [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [Issue #18](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/18), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md) |
+| **Gabriel Saraiva Canabrava** |Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), [Prototipação](1.5.10.Prototipacao.md) |   Excelente  | [Gravação da Produção do artefato](https://www.youtube.com/watch?v=fR64k5AaB44), [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #33](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/33) |
+| **Letícia de Cássia Hladczuk Rodrigues** |  Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), [Prototipação](1.5.10.Prototipacao.md) | Excelente | [Gravação da Produção do artefato](https://www.youtube.com/watch?v=fR64k5AaB44), [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [PR #33](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/33) |
+| **Mateus Levy Avelans Boquady**|  Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), na produção do [Design Sprint](1.1.DesignSprint.md), [Priorzação](1.5.7.Priorizacao.md) | Excelente  | [Gravação da Produção do artefato](https://www.youtube.com/watch?v=fR64k5AaB44), [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md) |
+| **Pablo Serra Carvalho** | Participação na [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) e na produção do [Design Sprint](1.1.DesignSprint.md) | Excelente |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md) |
+| **Rodrigo Fonseca Rodrigues**| Não participou da confecção do [Design Sprint](1.1.DesignSprint.md), Produção da [Priorzação](1.5.7.Priorizacao.md) | Bom |  [Reunião 5](../Projeto/Iniciativas%20Extras/ata_05.md), [Issue #15](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/15), [Reunião 6](../Projeto/Iniciativas%20Extras/ata_06.md) |
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
+**Autores:** [Luiza](), [Lucas]()
 
-|            Nome do Membro            |                                      Contribuição                                      | Significância da Contribuição para o Projeto |                   Comprobatórios                    |
-| :----------------------------------: | :------------------------------------------------------------------------------------: | :------------------------------------------: | :-------------------------------------------------: |
-|     Lucas Gama De Araujo Bottino     |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-|          Luiza Maluf Amorim          |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-|         Arthur Fonseca Vale          |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-|    Carlos Henrique de Souza Bispo    |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-|       Fillipe Souto de Andrade       | Participação na reunião e na produção do Design Sprint e documentação do Design Sprint |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-|      Gabriel Saraiva Canabrava       |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-| Letícia de Cássia Hladczuk Rodrigues |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-|     Mateus Levy Avelans Boquady      |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-|         Pablo Serra Carvalho         |                 Participação na reunião e na produção do Design Sprint                 |                  Excelente                   | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
-|      Rodrigo Fonseca Rodrigues       |                      Não participou da confecção do Design Sprint                      |                     Nula                     | [LINK](https://www.youtube.com/watch?v=fR64k5AaB44) |
+## __Foco 2: Módulo Artefato Generalista__
 
-## Módulo Artefato Generalista (Foco_2)
+| Nome do Membro | Contribuição | Significância da Contribuição para o Projeto | Comprobatórios |
+| :------------: | :----------: | :------------------------------------------: | :------------: |
+|**Lucas Gama De Araujo Bottino**     | Produção do [RW2H](1.2.3.5W2H.md), Revisão do [Mapa Mental](1.2.1.Mapa-mental.md) | Excelente | [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md) |
+| **Luiza Maluf Amorim** | Produção do [Mapa Mental](1.2.1.Mapa-mental.md), Revisão do [RW2H](1.2.3.5W2H.md) | Excelente | [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md) |
+|  **Arthur Fonseca Vale** | Produção e Revisão do [RichPicture](./1.2.2.RichPicture.md), [Léxico](1.2.4.Lexicos.md ) | Excelente  | [Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md), [PR #14](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/14) |
+| **Carlos Henrique de Souza Bispo** |                 Produção do [RW2H](1.2.3.5W2H.md), Produção e Revisão do [Léxico](1.2.4.Lexicos.md )                |                  Excelente                   | [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md),  [PR #14](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/issues/14) |
+|       **Fillipe Souto de Andrade**       | Produção do [Mapa Mental](1.2.1.Mapa-mental.md) |  Excelente | [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md) |
+|      **Gabriel Saraiva Canabrava**       |  Produção do [RichPicture](./1.2.2.RichPicture.md)  | Excelente |[Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md) |
+| **Letícia de Cássia Hladczuk Rodrigues** | Produção do [RichPicture](./1.2.2.RichPicture.md) | Excelente | [Reunião 4](../Projeto/Iniciativas%20Extras/ata_04.md) |
+|     **Mateus Levy Avelans Boquady**      | Produção do [Mapa Mental](1.2.1.Mapa-mental.md) |  Excelente |[Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md), [Mapa Mental](1.2.1.Mapa-mental.md) |
+|         **Pablo Serra Carvalho**         |  Produção do [RW2H](1.2.3.5W2H.md) e [Léxico](1.2.4.Lexicos.md ) | Excelente | [Reunião 3](../Projeto/Iniciativas%20Extras/ata_03.md) |
+|      **Rodrigo Fonseca Rodrigues**       | Produção do [Mapa Mental](1.2.1.Mapa-mental.md) |   Excelente  | [Reunião 2](../Projeto/Iniciativas%20Extras/ata_02.md), [Mapa Mental](1.2.1.Mapa-mental.md) |
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
+**Autores:** [Luiza](), [Lucas]()
 
-EXEMPLO:
-| Fulano | 1. Elaboração do Artefato 5W2H | EXCELENTE | Registro nos Versionamentos do Documento do 5W2H, conforme (link) e Commits (links)
+## __Foco 3: Módulo Modelagem BPMN__
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
 
-## Módulo Modelagem BPMN (Foco_3)
+| Nome do Membro | Contribuição | Significância da Contribuição para o Projeto |  Comprobatórios  |
+| :------------: | :----------: | :------------------------------------------: | :--------------: |
+| **Lucas Gama De Araujo Bottino** | Produção do [BPMN do Design Sprint](./1.3.ModelagemBPMN.md), [Metodologia](./1.3.ModelagemBPMN.md) e Revisão dos [BPMN de Uso do Sistema](./1.3.ModelagemBPMN.md) e [Elicitação de Requisitos](./1.3.ModelagemBPMN.md) | Excelente  | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30), [Reunião 7](Projeto/Iniciativas%20Extras/ata_07.md) |
+| **Luiza Maluf Amorim** | Produção do [BPMN Elicitação de Requisitos](./1.3.ModelagemBPMN.md), Revisão do [BPMN Design Sprint](./1.3.ModelagemBPMN.md), [Uso do Sistema](./1.3.ModelagemBPMN.md) e [Metodologia](./1.3.ModelagemBPMN.md). | Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) , [PR #24](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/24#pullrequestreview-2759152967), [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30)                                                           |
+| **Arthur Fonseca Vale** | Produção do [BPMN do Design Sprint](./1.3.ModelagemBPMN.md). | Excelente | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) , [Reunião 7](Projeto/Iniciativas%20Extras/ata_07.md)
+| **Carlos Henrique de Souza Bispo** | Produção do [BPMN do Uso do Sistema](./1.3.ModelagemBPMN.md). | Bom | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) |
+| **Fillipe Souto de Andrade** | Produção do [BPMN Elicitação de Requisitos](./1.3.ModelagemBPMN.md). | Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) |
+| **Gabriel Saraiva Canabrava** | Produção do [BPMN do Uso do Sistema](./1.3.ModelagemBPMN.md). | Bom | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) |
+| **Letícia de Cássia Hladczuk Rodrigues** | Produção do [BPMN Elicitação de Requisitos](./1.3.ModelagemBPMN.md) | Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) |
+| **Mateus Levy Avelans Boquady** | Parodução do [BPMN do Uso do Sistema](./1.3.ModelagemBPMN.md) e documentação do [Modelagem BPMN](./1.3.ModelagemBPMN.md) |                  Excelente | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) , [Modelagem BPMN](1.3.ModelagemBPMN.md) |
+| **Pablo Serra Carvalho** | Produção do [BPMN do Design Sprint](./1.3.ModelagemBPMN.md). |                  Excelente | [PR #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30) , [Reunião 7](Projeto/Iniciativas%20Extras/ata_07.md) |
+| **Rodrigo Fonseca Rodrigues** | Produção do [BPMN Elicitação de Requisitos](./1.3.ModelagemBPMN.md). |                     Excelente | [PR #25](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25), [Reunião 8](../Projeto/Iniciativas%20Extras/ata_08.md) |
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
+**Autores:** [Luiza](), [Lucas]()
 
-EXEMPLO:
-| Fulano | 1. Modelagem da atividade ATIVIDADE_X. 2. Participação no subprocesso SUBPROCESSO_Y | Regular | Registro nos Versionamentos do Documento de Modelagem BPMN, conforme (link) e debates nas Issues (links)
+## Histórico de Versão
 
-|            Nome do Membro            |                                                                          Contribuição                                                                          | Significância da Contribuição para o Projeto |                                                                                                                                                                                       Comprobatórios                                                                                                                                                                                       |
-| :----------------------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------: | :------------------------------------------: | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
-|     Lucas Gama De Araujo Bottino     | Participação na confecção do BPMN do Design Sprint, confecção e revisão do BPMN de Metodologia e revisão dos BPMN de Uso do Sistema e Elicitação de Requisitos |                  Excelente                   | [Revisor do PR 'adicionando metodologia bpmn' #30](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30), [Commit Diagrama BPMN Metodologia](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/30/commits/9bda33f007c70325fcf239393167a59ac4ce7765), [Reunião BPMN Design Sprint](Projeto/Iniciativas%20Extras/ata_07.md), |
-|          Luiza Maluf Amorim          |                    Participação na confecção do BPMN Elicitação de Requisitos, revisão do BPMN Design Sprint, Uso do Sistema e Metodologia.                    |                  Excelente                   |                                                            [Commit Diagrama BPMN Elicitação de Requisitos](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/25/commits/569ce8af00e341e427ea011fa3ecd6f0a15290a1), [Reunião da confecção do BPMN](https://www.youtube.com/watch?v=033lENt9pqk)                                                             |
-|         Arthur Fonseca Vale          |                                             Participação na confecção do BPMN do Uso do Sistema e de Metodologia.                                              |                  Excelente                   |                                                                   [Commit Diagrama BPMN do Design Sprint](https://github.com/UnBArqDsw2025-1-Turma01/2025.1-T01-_G3_EuMeAmo_Entrega_01/pull/24/commits/45d87a2ecdb7e114a8a03f9a6161c24b033df6b2), [Reunião da confecção do BPMN](Projeto/Iniciativas%20Extras/ata_01.md)                                                                   |
-|    Carlos Henrique de Souza Bispo    |                                             Participação na confecção do BPMN do Uso do Sistema e de Metodologia.                                              |                  Excelente                   |                                                                                                                                                                        [Reunião da confecção do BPMN](COLOCAR LINK)                                                                                                                                                                        |
-|                                      |
-|       Fillipe Souto de Andrade       |                                                  Participação na confecção do BPMN Elicitação de Requisitos.                                                   |                  Excelente                   |                                                                                                                                                        [Reunião da confecção do BPMN](https://www.youtube.com/watch?v=033lENt9pqk)                                                                                                                                                         |
-|      Gabriel Saraiva Canabrava       |                                             Participação na confecção do BPMN do Uso do Sistema e de Metodologia.                                              |                  Excelente                   |                                                                                                                                                                        [Reunião da confecção do BPMN](COLOCAR LINK)                                                                                                                                                                        |
-| Letícia de Cássia Hladczuk Rodrigues |                                                   Participação na confecção do BPMN Elicitação de Requisitos                                                   |                  Excelente                   |                                                                                                                                                        [Reunião da confecção do BPMN](https://www.youtube.com/watch?v=033lENt9pqk)                                                                                                                                                         |
-|     Mateus Levy Avelans Boquady      |                                  Participação na confecção do BPMN do Uso do Sistema e de Metodologia e documentação do BPMN                                   |                  Excelente                   |                                                                                                                                                                        [Reunião da confecção do BPMN](COLOCAR LINK)                                                                                                                                                                        |
-|         Pablo Serra Carvalho         |                                                      Participação na confecção do BPMN do Design Sprint.                                                       |                  Excelente                   |                                                                                                                                                           [Reunião da confecção do BPMN](Projeto/Iniciativas%20Extras/ata_01.md)                                                                                                                                                           |
-|      Rodrigo Fonseca Rodrigues       |                                                  Participação na confecção do BPMN Elicitação de Requisitos.                                                   |                     Nula                     |                                                                                                                                                        [Reunião da confecção do BPMN](https://www.youtube.com/watch?v=033lENt9pqk)                                                                                                                                                         |
-
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
+| Versão | Data | Descrição | Autor | Revisor
+|:-:|:-:|:-:|:-:|:-:|
+|`1.0`| 11/04/2025 | Criação do documento| [Luiza Maluf](https://github.com/LuizaMaluf), [Lucas Bottino](https://github.com/bottinolucas)|   |
