docs/adição das contribuições da Release

--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -55,6 +55,18 @@
 
 **Autores:** [Luiza](), [Lucas]()
 
+</center>
+
+## __Participações Release '1.0'__
+
+<center>
+
+**Imagem 1:** Contribuições ao Repositório da entrega 1 - Pull Requests
+
+![Release](../assets/release1.png)
+
+</center>
+
 ## Histórico de Versão
 
 | Versão | Data | Descrição | Autor | Revisor
