--- a/docs/Base/1.3.ModelagemBPMN.md
+++ b/docs/Base/1.3.ModelagemBPMN.md
@@ -24,7 +24,6 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 **Figura 1:** Processo de Sprint Design 
 
-</center>
 
 <div  style="text-align: center">
 
@@ -32,15 +31,16 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 </div>
 
+
 ## Elicitação de Requisitos
 
-<iframe src="../assets/bpmn_elicitacao/bpmn-req.pdf" width="100%" height="600px"></iframe>
+![Elicitação de Requisitos](../assets/bpmn_elicitacao/eli-bpmn.png)
 
-<center>
+
 
 **Figura 2:** Elicitação de Requisitos
 
-</center>
+
 
 
 <div  style="text-align: center">
@@ -53,11 +53,11 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 ![Artefato usodoSistema](../assets/bpmn_uso_do_sistema/bpmn_uso_do_sistema.jpeg)
 
-<center>
+
 
 **Figura 3:** Uso do Sistema 
 
-</center>
+
 
 
 <div  style="text-align: center">
@@ -68,13 +68,12 @@ Este projeto de desenho de software adotará metodologias ágeis, com foco em Sc
 
 ## Metodologia
 
-<center>
+
 
 ![Artefato Metodologia](../assets/bpmn_metodologia/imagem-bpmn-metodologia.jpg)
 
 Figura 4: Metodologia
 
-</center>
 
 
 <div  style="text-align: center">
@@ -82,6 +81,7 @@ Figura 4: Metodologia
 <font size="3">Autores: [Lucas Bottino](https://github.com/LucasBottino), 2025.</font>
 
 </div>
+</center>
 
 ## Gravações da realização dos diagramas
 
