--- a/docs/Base/1.5.10.Prototipacao.md
+++ b/docs/Base/1.5.10.Prototipacao.md
@@ -32,7 +32,7 @@ Os membros envolvidos na elaboração do protótipo foram:
 
 ## __Resultados__
 
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/proto/32O4uTBCfRh2z1EiprOExd/EuMeAmo?node-id=30-1927&p=f&t=8oer5GsM7puegVqs-1&scaling=contain&content-scaling=fixed&page-id=30%3A20&starting-point-node-id=30%3A1927" allowfullscreen></iframe>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/32O4uTBCfRh2z1EiprOExd/EuMeAmo?node-id=14-60&p=f&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=14%3A60&embed-host=share" allowfullscreen></iframe>
 
 ## __Paleta de Cores__
 
